people pattern processor

--- a/streams-contrib/pom.xml
+++ b/streams-contrib/pom.xml
@@ -49,6 +49,7 @@
         <!--<module>streams-processor-tika</module>-->
         <module>streams-provider-instagram</module>
         <module>streams-processor-json</module>
+        <module>streams-processor-peoplepattern</module>
         <module>streams-processor-urls</module>
         <module>streams-provider-datasift</module>
         <module>streams-provider-facebook</module>
