--- a/streams-contrib/streams-persist-hbase/pom.xml
+++ b/streams-contrib/streams-persist-hbase/pom.xml
@@ -12,16 +12,10 @@
     <artifactId>streams-persist-hbase</artifactId>
 
     <properties>
-        <hadoop-common.version>2.0.0-cdh4.5.0</hadoop-common.version>
-        <hbase.version>0.94.6-cdh4.5.0</hbase.version>
+        <hadoop-common.version>2.2.0</hadoop-common.version>
+        <hbase.version>0.94.6</hbase.version>
+        <zookeeper.version>3.4.5</zookeeper.version>
     </properties>
-
-    <repositories>
-        <repository>
-            <id>cloudera</id>
-            <url>https://repository.cloudera.com/artifactory/repo</url>
-        </repository>
-    </repositories>
 
     <dependencies>
         <dependency>
