--- a/streams-runtimes/streams-runtime-pig/pom.xml
+++ b/streams-runtimes/streams-runtime-pig/pom.xml
@@ -29,8 +29,8 @@
     <artifactId>streams-runtime-pig</artifactId>
 
     <properties>
-        <hadoop-client.version>2.0.0-mr1-cdh4.6.0</hadoop-client.version>
-        <pig.version>0.11.0-cdh4.6.0</pig.version>
+        <hadoop-client.version>2.2.0</hadoop-client.version>
+        <pig.version>0.11.1</pig.version>
     </properties>
 
     <dependencies>
@@ -103,8 +103,7 @@
         <dependency>
             <groupId>jline</groupId>
             <artifactId>jline</artifactId>
-            <version>2.11</version>
-            <scope>test</scope>
+            <version>0.9.94</version>
         </dependency>
         <dependency>
             <groupId>org.antlr</groupId>
